# quakeforge

./: .gitignore  CodingStyle  INSTALL  Makefile.am  NEWS  README.cygwin  README.md  TODO  acconfig.h  acinclude.m4  bootstrap  configure.ac  configure.in  packages  quakeforge-config.in  quakeforge.lsm.in
cs-code/: .gitignore  Makefile  Makefile.am  cbuf.h  cbuf.r  cbuf_def.qc  client_menu.qc  cmd.h  cmd.r  cmd_def.qc  console.qc  controls_o.h  controls_o.qc  cvar.h  cvar_def.qc  draw.h  draw.r  draw_def.qc  file.h  file.r  file_def.qc  game.h  game.r  game_def.qc  inputline.h  inputline.r  inputline_def.qc  inputline_util.qc  key.h  key_defs.qc  menu.h  menu.qc  menu.r  menu.src  menu.src.in  menu_def.qc  menu_pics.qc  menu_util.qc  object.h  object.r  (+8 more)
desktop/: Makefile.am  Makemodule.am  quakeforge-nq-glx.desktop  quakeforge-nq-sdl.desktop  quakeforge-nq-sdl32.desktop  quakeforge-qw-glx.desktop  quakeforge-qw-sdl.desktop  quakeforge-qw-sdl32.desktop
doc/: .gitignore  Makefile.am  Makemodule.am  QCMenuCondingStyle  QF-HOWTO  bind.dox  bind.txt  cliptest.map  config.dox  configure.ac  connect.dox  connect.txt  cshifts.dox  cshifts.txt  cvarlist.txt  dirconf.dox  dirconf.txt  docstrap  doxygen.css  faq.dox  faq.txt  filesystem.dox  gib.html  hud.txt  imt.dox  mapformat.dox  mapformat.txt  property-list.dox  property-lists.dox  qf-client-3dfx-cvar.txt  qf-client-ggi-cvar.txt  qf-client-glx-cvar.txt  qf-client-sdl-cvar.txt  qf-client-sgl-cvar.txt  qf-client-svga-cvar.txt  qf-client-x11-cmd.txt  qf-client-x11-cvar.txt  qf-logo.blend  qf-server-cmd.txt  qf-server-cvar.txt  (+36 more)
doc/clipping/: hit_corner_1.fig  miss_corner_1.fig  miss_corner_2.fig
doc/config/: glspeed-v1.cfg  glspeed-v2.cfg  glspeed-v3.cfg  glspeed.cfg  sensitivity.gib  swspeed.cfg  vkb.cfg  zoom.gib  zoom.rc
doc/data/: manual.txt  techinfo.txt
doc/gib/: GIB.lyx  break.gib  continue.gib  curly.gib  examples.sh  for.gib  gib_head.eps  if-chain.gib  if-else.gib  if-simple.gib  while.gib
doc/ideas/: language.txt  memory.txt  nehahra  quack.fig  quakedownload.txt  rhamph.txt  serverlist.txt
doc/man/: Makefile.am  quakeforge.1
doc/old/: CodingStyle  QF-HOWTO  glqnotes.txt  net_DoS_protection.txt  wqreadme.txt
doc/progs/: vm-exec.c  vm-mem.fig
doc/qtv/: qwtv.fig
doc/texinfo/: .gitignore  Makefile.am  quakeforge.texinfo
hw/source/: .gitignore  Makefile.am  Makemodule.am  cmds.c  master.c  net.c  net_test.c  vars.c
include/: .gitignore  Makefile.am  Makemodule.am  adivtab.h  alsa_funcs_list.h  anorm_dots.h  anorms.h  asm_draw.h  asm_i386.h  block16.h  block8.h  bsearch.h  buildnum.h  cl_console.h  clview.h  cmd.h  compat.h  console.h  context_sdl.h  context_win.h  context_wl.h  context_x11.h  crc.h  csqc.h  d_iface.h  d_ifacea.h  d_local.h  dga_check.h  exp.h  fbset.h  gamedefs.h  garbage.h  getopt.h  gib_buffer.h  gib_builtin.h  gib_classes.h  gib_error.h  gib_execute.h  gib_function.h  gib_handle.h  (+83 more)
include/QF/: Makefile.am  Makemodule.am  alloc.h  animation.h  backtrace.h  base64.h  bspfile.h  cbuf.h  cdaudio.h  cexpr.h  checksum.h  clip_hull.h  cmd.h  cmem.h  compat.h  console.h  crc.h  csqc.h  cvar.h  darray.h  draw.h  dstring.h  ecs.h  entity.h  exp.h  fbsearch.h  gcc_attr.h  gib.h  gib_buffer.h  gib_builtin.h  gib_execute.h  gib_function.h  gib_init.h  gib_parse.h  gib_process.h  gib_regex.h  gib_semantics.h  gib_thread.h  gib_tree.h  gib_vars.h  (+77 more)
include/client/: chase.h  effects.h  entities.h  hud.h  input.h  locs.h  particles.h  sbar.h  screen.h  state.h  temp_entities.h  view.h  world.h
include/evdev/: hotplug.h  inputlib.h
include/qw/: bothdefs.h  msg_backbuf.h  msg_ucmd.h  pmove.h  protocol.h
include/win32/: dirent.h  fnmatch.h  stdint.h  version.h  version.h.in
include/xinput/: xi.h
libs/: Makefile.am  Makemodule.am
libs/audio/: Makefile.am  Makemodule.am  cd.c  cd_file.c  cd_linux.c  cd_sdl.c  cd_sgi.c  cd_win.c  cd_xmms.c  snd.c  snd_common.c  snd_progs.c  testsound.c
libs/client/: Makefile.am  Makemodule.am  builtins.c  cl_chase.c  cl_effects.c  cl_entities.c  cl_input.c  cl_light.c  cl_particles.c  cl_screen.c  cl_temp_entities.c  cl_view.c  cl_world.c  default_input.plist  hud.c  locs.c  old_keys.c  sbar.c
libs/console/: Makefile.am  Makemodule.am  bi_inputline.c  buffer.c  cl_debug.c  client.c  complete.c  console.c  filelist.c  inputline.c  list.c  maplist.c  menu.c  pr_keys.c  server.c  view.c
libs/ecs/: Makemodule.am  component.c  ecs.c  entity.c  hierarchy.c  subpool.c
libs/entity/: Makemodule.am  hierarchy.c  transform.c
libs/gamecode/: .gitignore  Makefile.am  Makemodule.am  convert.py  extend.py  hops.py  opcodes.py  pr_builtins.c  pr_comp.h  pr_debug.c  pr_edict.c  pr_exec.c  pr_load.c  pr_offs.c  pr_opcode.c  pr_parse.c  pr_resolve.c  pr_resource.c  pr_strings.c  pr_v6p_opcode.c  pr_zone.c  swizzle.py
libs/gib/: Makefile.am  Makemodule.am  bi_gib.c  exp.c  gib.c  gib_buffer.c  gib_builtin.c  gib_classes.c  gib_execute.c  gib_function.c  gib_handle.c  gib_init.c  gib_instructions.c  gib_instructions.h  gib_interpret.c  gib_interpret.h  gib_keys.c  gib_modules.c  gib_modules.h  gib_object.c  gib_parse.c  gib_parse.h  gib_process.c  gib_regex.c  gib_semantics.c  gib_stack.c  gib_stack.h  gib_thread.c  gib_tree.c  gib_vars.c  gib_vars.h  ops.c  regex.c
libs/image/: Makefile.am  Makemodule.am  convert.c  image.c  pcx.c  png.c  tga.c
libs/input/: Makemodule.am  gamecontrollerdb_qf.txt  in_axis.c  in_axis_button.c  in_binding.c  in_button.c  in_common.c  in_evdev.c  in_event.c  in_gamepad.c  in_imt.c  in_xinput.c  keys.c
libs/models/: Makefile.am  Makemodule.am  animation.c  blend_palette.c  clip_hull.c  fullbright.c  gl_model_fullbright.c  gl_skin.c  glsl_skin.c  model.c  null_model.c  portal.c  quickhull.c  skin.c  sw_skin.c  testclip.c  trace-id.c  trace.c  vulkan_skin.c  winding.c
nq/: .gitignore  AUTHORS  Makefile.am  Makemodule.am  TODO  acconfig.h  acinclude.m4  configure.in  nuq.lsm.in
qw/: .gitignore  Makefile.am  Makemodule.am  README  README.WIN  ROADMAP  acconfig.h  configure.in  newtree.dsw
vc2008/: Makefile.am  QuakeForge.sln  readme.txt
(+3579 files in other folders)
